store/src/styles/components/on_demand_menu.scss
.hern-on-demand-menu {
   display: flex;
   width: auto;
   background: #367bf5e5;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   position: sticky;
   bottom: 5.2em;
   padding: 0.5em;
   width: 90px;
   align-items: center;
   justify-content: space-around;
   cursor: pointer;
   left: calc(50% - 45px);
}
.hern-on-demand-menu-title {
   font-weight: 600;
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
   letter-spacing: 0.02em;
}
.hern-on-demand-menu-list-container {
   position: fixed;
   background: #20202066;
   display: flex;
   height: 0;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: 10;
   width: inherit;
   justify-content: center;
   transition: height 0.35s ease;
}
.hern-on-demand-menu-list {
   position: absolute;
   bottom: 8em;
   background: #ffffff;
   padding: 0.5em;
   width: 15em;
   max-height: 12em;
   overflow: auto;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   ul {
      margin: 0;
      padding: 0;
   }
   li {
      list-style: none;
      padding: 4px 0;
      cursor: pointer;
      font-style: italic;
      font-weight: 400;
      font-size: 18px;
      line-height: 22px;
      > a {
         width: 100%;
         display: flex;
         justify-content: space-between;
      }
   }
   li:hover {
      background: #f9f9f9;
   }
   li:active {
      color: #2d6bd8;
   }
   &::-webkit-scrollbar {
      width: 0;
   }
}
.hern-on-demand-menu__navigationAnchor {
   position: fixed;
   position: sticky;
   display: flex;
   justify-content: center;
   /*Stick to the top  with the equal height of navigatin menu*/
   top: var(--hern-navigation-menu-height);
   z-index: 10;
   width: inherit;
   background-color: #fff;
   > ul {
      display: flex;
      width: inherit;
      overflow-x: auto;
      white-space: nowrap;
      padding: 1em;
      &::-webkit-scrollbar {
         height: 0;
      }
      > li {
         list-style: none;
         // padding: 4px 10px;
         cursor: pointer;
         margin: 0 0.4em;
         // border-radius: 1em;
         font-weight: 700;
         font-size: 14px;
         line-height: 16px;
         font-size: 18px;
         line-height: 20px;
         color: var(--hern-accent);
         > a {
            width: 100%;
            display: flex;
            justify-content: space-between;
            color: var(--hern-accent);
            text-decoration: none;
            padding: 0.5em 1em;
            box-sizing: border-box;
            border-radius: 12px;
            border: 1px solid var(--hern-accent);
         }
         > a:hover {
            text-decoration: none;
         }
      }
   }
}
.hern-on-demand-menu__navigationAnchor-li--active {
   color: #ffffff !important;
   background: var(--hern-accent) !important;
}
.hern-on-demand-menu__heading {
   display: none;
   font-weight: 600;
   font-size: 20px;
   line-height: 24px;
   color: #202020;
   padding: 0 0.85em;
   display: -webkit-flex;
   display: -moz-box;
   display: flex;
   -moz-box-align: center;
   font-style: normal;
}
@media only screen and (min-width: 769px) {
   .hern-on-demand-menu__navigationAnchor {
      > ul {
         &::-webkit-scrollbar {
            height: 4px;
            border-radius: 0.5px;
         }
         &::-webkit-scrollbar-thumb {
            background-color: darkgrey;
            border-radius: 2px;
         }
      }
   }
   .hern-on-demand-menu__heading {
      display: block;
   }
   .hern-on-demand-menu-list {
      padding: 0;
   }
}

